language/src/test/programs/error/runtime/no_match_for_eval.rngl
fn main():
    ret error_f(100)

fn error_f(a):
    ret eval:
        a == 99: 99
        a == 101: 101